name:                pack-compression
version:             0.0.0.1

synopsis:            gzip compatible `pack` compression

description:         Before `gzip`, there was `compress`. Before `compress`,
                     there was `pack`. This Haskell package implements this
                     early 1980s Huffman based compression format.

homepage:            https://github.com/koalaman/pack
license:             PublicDomain
author:              Vidar Holen
maintainer:          spam@vidarholen.net
build-type:          Simple
extra-source-files:  README.md

cabal-version:       >=1.10

executable pack
  main-is:             pack.hs
  build-depends:       base >=4.9 && <4.10,
                       containers,
                       bytestring

  default-language:    Haskell2010
  
